--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "lodash.debounce": "^4.0.8",
     "pinia": "^2.1.3",
     "sass": "^1.63.6",
-    "vue": "^3.3.4"
+    "vue": "^3.3.4",
+    "vue-router": "^4.2.4"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.2.0",
