--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "dayjs": "^1.11.9",
     "lodash.debounce": "^4.0.8",
     "pinia": "^2.1.3",
     "sass": "^1.63.6",
